--- a/src/client/assets/css/main.css
+++ b/src/client/assets/css/main.css
@@ -3,9 +3,13 @@
   padding: 20px;
 }
 
+.page h1{
+  text-align: center;
+}
+
 @media only screen and (max-width: 800px) {
   .page {
-    margin: 0 20px 0px 70;
+    margin: 0 20px 0px 70px;
     padding: 10px;
   }
 }
