--- a/src/client/assets/css/main.css
+++ b/src/client/assets/css/main.css
@@ -7,9 +7,74 @@
   text-align: center;
 }
 
+a {
+  text-decoration: none;
+  font-weight: 600;
+  color: rgb(102, 102, 102);
+  opacity: 0.7;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+.con-form {
+  width: 100%;
+}
+.con-form .flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.con-form .flex a {
+  font-size: 0.8rem;
+  opacity: 0.7;
+}
+.con-form .flex a:hover {
+  opacity: 1;
+}
+.con-form .vs-checkbox-label {
+  font-size: 0.8rem;
+}
+.con-form .vs-input-content {
+  margin: 10px 0px;
+  width: calc(100%);
+}
+.con-form .vs-input-content .vs-input {
+  width: 100%;
+}
+.footer-dialog {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: calc(100%);
+}
+
+.not-margin {
+  margin: 0px;
+  font-weight: normal;
+  padding: 10px;
+}
+
 .primary{
   color: #fff;
   background-color: rgb(25, 91, 255) !important;
+}
+
+.table-header {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.con-content {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.con-content > div {
+  display: flex;
+  align-items: center;
 }
 
 @media only screen and (max-width: 800px) {
