--- a/src/client/assets/css/main.css
+++ b/src/client/assets/css/main.css
@@ -77,6 +77,11 @@ a:hover {
   align-items: center;
 }
 
+.closeDialogButton {
+  position: absolute;
+  right: 10px;
+}
+
 @media only screen and (max-width: 800px) {
   .page {
     margin: 0 20px 0px 70px;
