--- a/src/client/assets/css/main.css
+++ b/src/client/assets/css/main.css
@@ -95,6 +95,10 @@ a:hover {
   right: 10px;
 }
 
+td{
+  padding: 10px;
+}
+
 @media only screen and (max-width: 800px) {
   .page {
     margin: 0 20px 0px 70px;
