--- a/src/client/assets/css/main.css
+++ b/src/client/assets/css/main.css
@@ -1,12 +1,12 @@
-*{
-  font-family: 'Poppins', sans-serif;
+* {
+  font-family: "Poppins", sans-serif;
 }
 
-.my-5{
+.my-5 {
   margin: 20px 0;
 }
 
-.ma-5{
+.ma-5 {
   margin: 20px;
 }
 
@@ -15,7 +15,7 @@
   padding: 20px;
 }
 
-.page h1{
+.page h1 {
   text-align: center;
 }
 
@@ -69,7 +69,7 @@ a:hover {
   padding: 10px;
 }
 
-.primary{
+.primary {
   color: #fff;
   background-color: rgb(25, 91, 255) !important;
 }
@@ -95,8 +95,12 @@ a:hover {
   right: 10px;
 }
 
-td{
+td {
   padding: 10px;
+}
+
+.page .center.grid {
+  margin-top: 50px;
 }
 
 @media only screen and (max-width: 800px) {
@@ -104,6 +108,16 @@ td{
     margin: 0 20px 0px 70px;
     padding: 10px;
   }
+
+  .page h1 {
+    margin-top: 10px;
+    font-size: 22px;
+  }
+
+  .page .center.grid {
+    margin-top: 20px;
+  }
+
 }
 
 *::-webkit-scrollbar {
