--- a/src/client/assets/css/main.css
+++ b/src/client/assets/css/main.css
@@ -103,6 +103,10 @@ td {
   margin-top: 50px;
 }
 
+.vs-dialog{
+  min-width: 800px;
+}
+
 @media only screen and (max-width: 800px) {
   .page {
     margin: 0 20px 0px 70px;
