--- a/src/client/assets/css/main.css
+++ b/src/client/assets/css/main.css
@@ -1,136 +1,135 @@
 * {
-  font-family: "Poppins", sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
 
 .my-5 {
-  margin: 20px 0;
+	margin: 20px 0;
 }
 
 .ma-5 {
-  margin: 20px;
+	margin: 20px;
 }
 
 .page {
-  margin: 0 130px;
-  padding: 20px;
+	margin: 0 130px;
+	padding: 20px;
 }
 
 .page h1 {
-  text-align: center;
+	text-align: center;
 }
 
 a {
-  text-decoration: none;
-  font-weight: 600;
-  color: rgb(102, 102, 102);
-  opacity: 0.7;
+	text-decoration: none;
+	font-weight: 600;
+	color: rgb(102, 102, 102);
+	opacity: 0.7;
 }
 
 a:hover {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 .con-form {
-  width: 100%;
+	width: 100%;
 }
 .con-form .flex {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 .con-form .flex a {
-  font-size: 0.8rem;
-  opacity: 0.7;
+	font-size: 0.8rem;
+	opacity: 0.7;
 }
 .con-form .flex a:hover {
-  opacity: 1;
+	opacity: 1;
 }
 .con-form .vs-checkbox-label {
-  font-size: 0.8rem;
+	font-size: 0.8rem;
 }
 .con-form .vs-input-content {
-  margin: 10px 0px;
-  width: calc(100%);
+	margin: 10px 0px;
+	width: calc(100%);
 }
 .con-form .vs-input-content .vs-input {
-  width: 100%;
+	width: 100%;
 }
 .footer-dialog {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  width: calc(100%);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	width: calc(100%);
 }
 
 .not-margin {
-  margin: 0px;
-  font-weight: normal;
-  padding: 10px;
+	margin: 0px;
+	font-weight: normal;
+	padding: 10px;
 }
 
 .primary {
-  color: #fff;
-  background-color: rgb(25, 91, 255) !important;
+	color: #fff;
+	background-color: rgb(25, 91, 255) !important;
 }
 
 .table-header {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
 }
 
 .con-content {
-  display: flex;
-  justify-content: flex-end;
+	display: flex;
+	justify-content: flex-end;
 }
 
 .con-content > div {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 }
 
 .closeDialogButton {
-  position: absolute;
-  right: 10px;
+	position: absolute;
+	right: 10px;
 }
 
 td {
-  padding: 10px;
+	padding: 10px;
 }
 
 .page .center {
-  margin-top: 50px;
+	margin-top: 50px;
 }
 
-.vs-dialog{
-  min-width: 800px;
+.vs-dialog {
+	min-width: 800px;
 }
 
 @media only screen and (max-width: 800px) {
-  .page {
-    margin: 0 20px 0px 70px;
-    padding: 10px;
-  }
+	.page {
+		margin: 0 20px 0px 70px;
+		padding: 10px;
+	}
 
-  .page h1 {
-    margin-top: 10px;
-    font-size: 22px;
-  }
+	.page h1 {
+		margin-top: 10px;
+		font-size: 22px;
+	}
 
-  .page .center.grid {
-    margin-top: 20px;
-  }
-
+	.page .center.grid {
+		margin-top: 20px;
+	}
 }
 
 *::-webkit-scrollbar {
-  width: 5px;
-  border-radius: 16px;
-  background-color: #eee;
+	width: 5px;
+	border-radius: 16px;
+	background-color: #eee;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
-  outline: 1px solid slategrey;
+	background-color: darkgrey;
+	outline: 1px solid slategrey;
 }
